# Dashboard---Suporte-PGMais

./: .dockerignore  .gitignore  AUTH_INSTRUCTIONS.md  CHECKLIST_TESTES.md  CLAUDE.md  COMECE_AQUI.md  GUIA_TESTES_LOCAIS.md  GUIA_VISUAL_MELHORIAS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LEIA-ME-PRIMEIRO.md  MELHORIAS_BOTOES_MODO_RESUMO.md  MELHORIAS_UX_UI.md  MODO_RESUMO_TELA_UNICA.md  OPENROUTER_VALIDATION.txt  QUICKSTART.md  README.md  RESUMO_MODO_TELA_UNICA.md  RESUMO_MUDANCAS.txt  SECURITY_SETUP.md  SETUP_COMPLETO.md  SUMARIO_BOTOES_MODO_RESUMO.md  SUMARIO_MELHORIAS.md  SUMARIO_VISUAL_ASCII.md  TASK_10_COMPLETION_REPORT.md  TESTE_RAPIDO_BOTOES_RESUMO.md  docker-compose.yml  frontend_log.txt  manual.html  package-lock.json  project-guide.html  requirements.txt  setup.bat  setup.sh  test_ai_endpoint.py  test_openrouter.py  vercel.json  🔄 REINICIAR DASHBOARD.bat  🔄 RESTART DASHBOARD.bat
Searches/: winrt--{S-1-5-21-3976705412-3341462734-3562599512-52182}-.searchconnector-ms
backend/: .env.example  Dockerfile  account_ranking.json  auth.py  bus.json  cache.py  database.py  jira_client.py  main.py  mock_data.py  models.py  performance.py  priority_requests.json  pyproject.toml  requirements.txt  security.py  users.json
backend/src/: main.py
backend/src/api/: __init__.py  deps.py
backend/src/api/v1/: __init__.py  admin.py  auth.py  dashboard.py  health.py  priority.py
backend/src/core/: __init__.py  config.py  logging.py  security.py
backend/src/domain/: __init__.py  entities.py  enums.py  exceptions.py  models.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/cache/: __init__.py  base.py
backend/src/infrastructure/clients/: __init__.py  google_oauth.py  jira.py  openrouter.py
backend/src/infrastructure/database/: __init__.py  base.py  queries.py
backend/src/services/: __init__.py  admin_service.py  ai_service.py  auth_service.py  dashboard_service.py  health_service.py  jira_service.py  priority_service.py
backend/static/: index.html
backend/static/assets/: index-CTPX-_j_.css  index-YzQF_kOP.js
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/: test_auth_service.py
docs/: architecture.md  manual_tecnico.html  security.md
docs/archived/: ENTERPRISE_RESTRUCTURING_SUMMARY.md  ENTERPRISE_VERIFICATION_CHECKLIST.md  FINAL_SUMMARY.md  MODULARIZATION_PLAN.md  MODULARIZATION_STATUS.md  PHASE_8_VALIDATION.md  STATUS_FINAL.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  analytics.js  apiUrl.js  index.css  main.jsx
frontend/src/components/: AIAssistantCollapsible.css  AIAssistantCollapsible.jsx  AIInsightsView.css  AIInsightsView.jsx  AdminSettings.css  AdminSettings.jsx  AdminView.css  AdminView.jsx  BacklogPanel.css  BacklogPanel.jsx  DashboardHome.css  DashboardHome.jsx  DeprioritizeModal.jsx  DevCard.css  DevCard.jsx  DevGrid.css  DevGrid.jsx  ErrorBoundary.jsx  FilterDropdown.css  FilterDropdown.jsx  FiltersView.css  FiltersView.jsx  IssueRow.css  IssueRow.jsx  KanbanView.css  KanbanView.jsx  KpiBar.css  (+20 more)
k8s/base/: configmap.yaml  deployment-backend.yaml  deployment-frontend.yaml  hpa.yaml  namespace.yaml  network-policy.yaml  service-backend.yaml  service-frontend.yaml
scripts/: generate-secrets.sh  healthcheck.sh  setup-dev.sh
(+4 files in other folders)
