[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgmais-dashboard"
version = "1.0.0"
description = "PGMais Team Dashboard - Jira Cloud Management Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PGMais Team", email = "team@pgmais.dev"}
]
keywords = [
    "jira",
    "dashboard",
    "team-management",
    "fastapi",
    "python"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core Web Framework
    "fastapi==0.115.0",
    "starlette==0.40.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.0",

    # ASGI Server
    "uvicorn[standard]==0.33.0",

    # HTTP Client
    "httpx==0.28.1",

    # Database
    "sqlalchemy==2.0.36",

    # Authentication & Security
    "bcrypt==4.2.1",
    "PyJWT==2.10.1",
    "cryptography==43.0.0",

    # Environment Configuration
    "python-dotenv==1.0.1",

    # Rate Limiting
    "limits==3.10.1",
    "cachetools==5.4.0",

    # AI Integration (OpenRouter)
    "litellm==1.52.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.24.0",
    "black==24.3.0",
    "ruff==0.4.2",
    "mypy==1.11.2",
    "pip-audit==2.6.3",
]
prod = [
    "python-json-logger==3.2.1",  # Structured logging
    "sentry-sdk==2.3.0",           # Error tracking
]

[project.urls]
Homepage = "https://github.com/pgmais/dashboard"
Documentation = "https://github.com/pgmais/dashboard/wiki"
Repository = "https://github.com/pgmais/dashboard.git"
Issues = "https://github.com/pgmais/dashboard/issues"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["pgmais*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # diretórios
  \.eggs
  | \.git
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (black handles this)
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
